# agentledger

./: .gitignore  README.md  demo.py  pyproject.toml
agentledger/: __init__.py  cli.py  evidence.py  exporters.py  ledger.py  merkle.py  policy.py  query.py  recorder.py  retention.py  signing.py  sinks.py
demos/: 01_agent_flight_recorder.py  02_tamper_evident_audit.py  03_offline_evidence_bundle.py  04_key_rotation_and_pqc.py  05_threshold_and_siem.py  06_denied_directive_trail.py  06_query_the_ledger.py  07_merkle_inclusion_proof.py  07_persistent_ledger.py  08_exporters_for_tooling.py  08_external_doctrine_gate.py  09_hmac_offline_only.py  09_retention_and_checkpoint.py  10_outcome_correlation.py  11_jsonl_siem_feed.py  12_tamper_after_export.py  13_hybrid_pqc_migration.py  14_approval_allowlist.py  15_multi_agent_pipeline.py  16_independent_verifier.py  17_key_compromise_response.py  18_callable_sink_alerting.py  19_cross_algorithm_audit.py  20_cli_walkthrough.py  _common.py  run_all.py
docs/: ARCHITECTURE.md  DEMOS.md
tests/: test_approvals.py  test_approvals_edge.py  test_bundle_robustness.py  test_cli.py  test_cli_edge.py  test_cli_new.py  test_demos.py  test_evidence.py  test_evidence_export.py  test_exporters.py  test_input_validation.py  test_key_rotation_edge.py  test_keylifecycle.py  test_ledger_queries.py  test_ledger_recorder.py  test_merkle.py  test_policy.py  test_policy_edge.py  test_pqc.py  test_query.py  test_retention.py  test_signing.py  test_signing_edge.py  test_sinks.py  test_sinks_edge.py  test_sinks_http.py  test_tamper_paths.py
