[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentledger"
version = "0.1.0"
description = "Vendor-neutral flight recorder for AI agents: signed, hash-chained directive ledger with offline-verifiable evidence."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Cognis Digital" }]
keywords = ["ai-agents", "governance", "audit", "ed25519", "ml-dsa", "post-quantum", "fips-204", "tamper-evident", "compliance", "provenance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Security :: Cryptography",
]
# Works on the standard library alone (HMAC signing). Install the extra for
# Ed25519 asymmetric signatures and offline third-party verification.
dependencies = []

[project.optional-dependencies]
ed25519 = ["cryptography>=41"]
dev = ["pytest>=7", "cryptography>=41"]

[project.scripts]
agentledger = "agentledger.cli:main"

[project.urls]
Homepage = "https://github.com/cognis-digital/agentledger"

[tool.setuptools]
packages = ["agentledger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
